src-tauri/build_error_gafete_2.log
    Checking brisas-app v0.1.0 (C:\Users\femprobrisas\proyecto-brisas\Rust\brisas-app\src-tauri)
error[E0308]: mismatched types
   --> src\db\gafete_queries.rs:333:8
    |
333 |       Ok(result.map(|r| {
    |  _____--_^
    | |     |
    | |     arguments to this enum variant are incorrect
334 | |         let reporter_name = match (r.reporter_nombre, r.reporter_apellido) {
335 | |             (Some(n), Some(a)) => Some(format!("{} {}", n, a)),
336 | |             _ => None,
...   |
353 | |     }))
    | |______^ expected `std::string::String`, found `std::option::Option<std::string::String>`
    |
    = note: expected enum `Option<(String, String, String, bool, Option<String>, ..., ..., ...)>`
               found enum `Option<(Option<String>, String, String, ..., ..., ..., ..., ...)>`
help: the type constructed contains `std::option::Option<(std::option::Option<std::string::String>, std::string::String, std::string::String, std::option::Option<bool>, std::option::Option<std::string::String>, std::option::Option<std::string::String>, std::option::Option<std::string::String>, std::option::Option<std::string::String>)>` due to the type of the argument passed
   --> src\db\gafete_queries.rs:333:5
    |
333 |        Ok(result.map(|r| {
    |   _____^  -
    |  |________|
334 | ||         let reporter_name = match (r.reporter_nombre, r.reporter_apellido) {
335 | ||             (Some(n), Some(a)) => Some(format!("{} {}", n, a)),
336 | ||             _ => None,
...   ||
353 | ||     }))
    | ||______-^
    | |_______|
    |         this argument influences the type of `Ok`
note: tuple variant defined here
   --> C:\Users\femprobrisas\.rustup\toolchains\stable-x86_64-pc-windows-gnu\lib/rustlib/src/rust\library\core\src\result.rs:554:5
    |
554 |     Ok(#[stable(feature = "rust1", since = "1.0.0")] T),
    |     ^^
    = note: the full name for the type has been written to 'C:\Users\femprobrisas\proyecto-brisas\Rust\brisas-app\src-tauri\target\debug\deps\brisas_app_lib-2a41adc01e5497d0.long-type-9417229323671791575.txt'
    = note: consider using `--verbose` to print the full type name to the console

warning: unused import: `std::str::FromStr`
  --> src\commands\gafete_commands.rs:11:5
   |
11 | use std::str::FromStr;
   |     ^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `std::str::FromStr`
 --> src\db\gafete_queries.rs:9:5
  |
9 | use std::str::FromStr;
  |     ^^^^^^^^^^^^^^^^^

warning: unused import: `std::str::FromStr`
  --> src\services\gafete_service.rs:17:5
   |
17 | use std::str::FromStr;
   |     ^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0308`.
warning: `brisas-app` (lib) generated 3 warnings
error: could not compile `brisas-app` (lib) due to 1 previous error; 3 warnings emitted
